feat: add Ultralove White light theme variant
- Add ultralove-white-color-theme.json with complete light theme definition
- Base theme on GitHub Light Colorblind with custom color overrides
- Include comprehensive UI coverage and syntax highlighting
- Update package.json to contribute both Black and White themes
- Enhance README.md to document theme collection and color palettes
- Add installation and customization examples for both variants
- Maintain Error Lens integration with consistent custom colors
- Support bright environment coding with clean white backgrounds

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "keywords": [
     "theme",
     "dark",
+    "light",
     "black",
+    "white",
     "ultralove",
     "color-theme"
   ],
@@ -22,6 +24,11 @@
         "label": "Ultralove Black",
         "uiTheme": "vs-dark",
         "path": "./themes/ultralove-black-color-theme.json"
+      },
+      {
+        "label": "Ultralove White",
+        "uiTheme": "vs",
+        "path": "./themes/ultralove-white-color-theme.json"
       }
     ]
   },
