--- a/package.json
+++ b/package.json
@@ -1,44 +1,52 @@
 {
-  "name": "ultralove-black-theme",
-  "displayName": "Ultralove Black Theme",
-  "description": "A sophisticated dark theme for VS Code",
-  "version": "0.1.0",
-  "engines": {
-    "vscode": "^1.74.0"
-  },
-  "categories": [
-    "Themes"
-  ],
-  "keywords": [
-    "theme",
-    "dark",
-    "light",
-    "black",
-    "white",
-    "ultralove",
-    "color-theme"
-  ],
-  "contributes": {
-    "themes": [
-      {
-        "label": "Ultralove Black",
-        "uiTheme": "vs-dark",
-        "path": "./themes/ultralove-black-color-theme.json"
-      },
-      {
-        "label": "Ultralove White",
-        "uiTheme": "vs",
-        "path": "./themes/ultralove-white-color-theme.json"
-      }
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ultralove/vscode-theme"
-  },
-  "author": {
-    "name": "Ultralove"
-  },
-  "license": "MIT",
-  "publisher": "ultralove"
+    "name": "ultralove-theme-collection",
+    "displayName": "Ultralove Theme Collection",
+    "description": "A sophisticated collection of VS Code themes featuring Black, White, and Blue variants for different coding environments",
+    "version": "0.1.0",
+    "engines": {
+        "vscode": "^1.74.0"
+    },
+    "categories": [
+        "Themes"
+    ],
+    "keywords": [
+        "theme",
+        "dark",
+        "light",
+        "black",
+        "white",
+        "blue",
+        "ultralove",
+        "color-theme",
+        "calming",
+        "collection"
+    ],
+    "contributes": {
+        "themes": [
+            {
+                "label": "Ultralove Black",
+                "uiTheme": "vs-dark",
+                "path": "./themes/ultralove-black-color-theme.json"
+            },
+            {
+                "label": "Ultralove White",
+                "uiTheme": "vs",
+                "path": "./themes/ultralove-white-color-theme.json"
+            },
+            {
+                "label": "Ultralove Blue",
+                "uiTheme": "vs-dark",
+                "path": "./themes/ultralove-blue-color-theme.json"
+            }
+        ]
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/ultralove/vscode-theme"
+    },
+    "author": {
+        "name": "Ultralove"
+    },
+    "license": "MIT",
+    "publisher": "ultralove"
 }
