feat(ci): add GitHub Actions workflow for automated VSIX builds
- Add build-vsix.yml workflow for automated package building
- Triggers on push to main/develop, PRs, and version tags
- Validates JSON files and creates VSIX packages
- Uploads artifacts and creates releases for tags
- Add npm scripts for local building and validation
- Update .copilot-instructions.md with workflow documentation
- Add workflow README for usage instructions

--- a/package.json
+++ b/package.json
@@ -48,5 +48,13 @@
         "name": "Ultralove"
     },
     "license": "MIT",
-    "publisher": "ultralove"
+    "publisher": "ultralove",
+    "scripts": {
+        "build": "vsce package --out ./dist/",
+        "install-local": "code --install-extension ./dist/*.vsix",
+        "validate": "vsce package --out ./dist/ --no-dependencies"
+    },
+    "devDependencies": {
+        "@vscode/vsce": "^2.19.0"
+    }
 }
