fix(ci): ensure dist directory exists before VSIX build
- Add mkdir -p ./dist before vsce package command
- Resolves 'ENOTDIR: not a directory, stat ./dist/' error
- GitHub Actions runner doesn't have dist directory (gitignored)
- Local builds work because dist directory exists from previous builds
- Ensures consistent behavior between local and CI environments

--- a/.github/workflows/build-vsix.yml
+++ b/.github/workflows/build-vsix.yml
@@ -52,6 +52,8 @@ jobs:
 
             - name: Build VSIX package
               run: |
+                  # Create dist directory if it doesn't exist
+                  mkdir -p ./dist
                   # Create VSIX package
                   vsce package --out ./dist/
 
