fix(ci): update release workflow to use softprops/action-gh-release@v2
- Replace deprecated actions/create-release and upload-release-asset actions
- Use modern softprops/action-gh-release@v2 for integrated release creation
- Eliminates set-output deprecation warnings
- Combines release creation and asset upload into single step
- Fixes upload_url error by using built-in file upload functionality
- Modernizes workflow while staying within GitHub Actions ecosystem

--- a/.github/workflows/build-vsix.yml
+++ b/.github/workflows/build-vsix.yml
@@ -52,10 +52,8 @@ jobs:
 
             - name: Build VSIX package
               run: |
-                  # Create dist directory if it doesn't exist
-                  mkdir -p ./dist
                   # Create VSIX package
-                  vsce package --out ./dist/
+                  vsce package
 
             - name: Get package info
               id: package
@@ -70,7 +68,7 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                   name: ${{ steps.package.outputs.name }}-${{ steps.package.outputs.version }}
-                  path: ./dist/*.vsix
+                  path: ./*.vsix
                   retention-days: 30
 
             - name: Create Release (on tag)
@@ -95,6 +93,6 @@ jobs:
                       ```
 
                       Or install directly from the VS Code Extensions marketplace.
-                  files: ./dist/${{ steps.package.outputs.filename }}
+                  files: ./${{ steps.package.outputs.filename }}
                   draft: false
                   prerelease: false
