--- a/.github/workflows/build-vsix.yml
+++ b/.github/workflows/build-vsix.yml
@@ -52,8 +52,10 @@ jobs:
 
             - name: Build VSIX package
               run: |
+                  # Create dist directory if it doesn't exist
+                  mkdir -p ./dist
                   # Create VSIX package
-                  vsce package
+                  vsce package --out ./dist/
 
             - name: Get package info
               id: package
@@ -68,7 +70,7 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                   name: ${{ steps.package.outputs.name }}-${{ steps.package.outputs.version }}
-                  path: ./*.vsix
+                  path: ./dist/*.vsix
                   retention-days: 30
 
             - name: Create Release (on tag)
@@ -93,6 +95,6 @@ jobs:
                       ```
 
                       Or install directly from the VS Code Extensions marketplace.
-                  files: ./${{ steps.package.outputs.filename }}
+                  files: ./dist/${{ steps.package.outputs.filename }}
                   draft: false
                   prerelease: false
