--- a/.github/workflows/build-vsix.yml
+++ b/.github/workflows/build-vsix.yml
@@ -8,6 +8,10 @@ on:
         branches: [main, 'feature/**']
     workflow_dispatch:
 
+permissions:
+    contents: write
+    pull-requests: read
+
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -73,40 +77,31 @@ jobs:
                   path: ./dist/*.vsix
                   retention-days: 30
 
-            - name: Create Release (on tag)
-              id: create_release
+            - name: Create Release and Upload Asset (on tag)
               if: startsWith(github.ref, 'refs/tags/v')
-              uses: actions/create-release@v1
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  tag_name: ${{ github.ref }}
-                  release_name: Release ${{ github.ref }}
-                  body: |
-                      ## Super Theme Collection ${{ steps.package.outputs.version }}
+              run: |
+                  # Extract tag name from ref
+                  TAG_NAME=${GITHUB_REF#refs/tags/}
 
-                      ### What's Included
-                      - Super Black Theme - Ultra-dark theme for low-light coding
-                      - Super White Theme - Clean light theme for bright environments
-                      - Super Blue Theme - Calming blue-tinted theme
+                  # Create release with GitHub CLI
+                  gh release create "$TAG_NAME" \
+                    --title "Release $TAG_NAME" \
+                    --notes "## Super Theme Collection ${{ steps.package.outputs.version }}
 
-                      ### Installation
-                      Download the `.vsix` file and install it using:
-                      ```bash
-                      code --install-extension ${{ steps.package.outputs.filename }}
-                      ```
+                  ### What's Included
+                  - Super Black Theme - Ultra-dark theme for low-light coding
+                  - Super White Theme - Clean light theme for bright environments
+                  - Super Blue Theme - Calming blue-tinted theme
 
-                      Or install directly from the VS Code Extensions marketplace.
-                  draft: false
-                  prerelease: false
+                  ### Installation
+                  Download the \`.vsix\` file and install it using:
+                  \`\`\`bash
+                  code --install-extension ${{ steps.package.outputs.filename }}
+                  \`\`\`
 
-            - name: Upload Release Asset (on tag)
-              if: startsWith(github.ref, 'refs/tags/v')
-              uses: actions/upload-release-asset@v1
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              with:
-                  upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path: ./dist/${{ steps.package.outputs.filename }}
-                  asset_name: ${{ steps.package.outputs.filename }}
-                  asset_content_type: application/zip
+                  Or install directly from the VS Code Extensions marketplace." \
+                    --draft=false \
+                    --prerelease=false \
+                    ./dist/${{ steps.package.outputs.filename }}
